# openglpractice

./: .gitignore  CMakeLists.txt  README.md
practice1/: CMakeLists.txt  main.cpp
